--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,14 +1,13 @@
-
 <div class="logo">
-	<a href="https://www.creative-tim.com" class="simple-text logo-mini">
-        <div class="logo-image-small">
-            <img src="./assets/img/angular2-logo-white.png"/>
-        </div>
-	</a>
+  <a href="https://www.creative-tim.com" class="simple-text logo-mini">
+    <div class="logo-image-small">
+      <img src="./assets/img/angular2-logo-white.png" />
+    </div>
+  </a>
 
-	<a href="https://www.creative-tim.com" class="simple-text logo-normal">
-		Creative Tim
-	</a>
+  <a href="https://www.creative-tim.com" class="simple-text logo-normal">
+    Angrez The Salon
+  </a>
 </div>
 
 
@@ -50,7 +49,7 @@
       </div>
     </div>
   </div>
-	<!-- <div *ngIf="isNotMobileMenu()">
+  <!-- <div *ngIf="isNotMobileMenu()">
         <form class="navbar-form navbar-left navbar-search-form" role="search">
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-search"></i></span>
@@ -91,31 +90,31 @@
             </li>
         </ul>
     </div> -->
-        <ul class="nav">
-            <li routerLinkActive="active" *ngFor="let menuitem of menuItems">
-                <!--If is a single link-->
-                <a [routerLink]="[menuitem.path]" *ngIf="menuitem.type === 'link'">
-                    <i class="{{menuitem.icontype}}"></i>
-                    <p>{{menuitem.title}}</p>
-                </a>
-                <!--If it have a submenu-->
-                <a data-toggle="collapse" href="#{{menuitem.collapse}}" *ngIf="menuitem.type === 'sub'">
-                    <i class="{{menuitem.icontype}}"></i>
-                    <p>{{menuitem.title}}<b class="caret"></b></p>
-                </a>
+  <ul class="nav">
+    <li routerLinkActive="active" *ngFor="let menuitem of menuItems">
+      <!--If is a single link-->
+      <a [routerLink]="[menuitem.path]" *ngIf="menuitem.type === 'link'">
+        <i class="{{menuitem.icontype}}"></i>
+        <p>{{menuitem.title}}</p>
+      </a>
+      <!--If it have a submenu-->
+      <a data-toggle="collapse" href="#{{menuitem.collapse}}" *ngIf="menuitem.type === 'sub'">
+        <i class="{{menuitem.icontype}}"></i>
+        <p>{{menuitem.title}}<b class="caret"></b></p>
+      </a>
 
-                <!--Display the submenu items-->
-                <div id="{{menuitem.collapse}}" class="collapse" *ngIf="menuitem.type === 'sub'">
-                    <ul class="nav">
-                        <li routerLinkActive="active" *ngFor="let childitem of menuitem.children">
-                            <a [routerLink]="[menuitem.path, childitem.path]">
-                                <span class="sidebar-mini-icon">{{childitem.ab}}</span>
-                                <span class="sidebar-normal">{{childitem.title}}</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
+      <!--Display the submenu items-->
+      <div id="{{menuitem.collapse}}" class="collapse" *ngIf="menuitem.type === 'sub'">
+        <ul class="nav">
+          <li routerLinkActive="active" *ngFor="let childitem of menuitem.children">
+            <a [routerLink]="[menuitem.path, childitem.path]">
+              <span class="sidebar-mini-icon">{{childitem.ab}}</span>
+              <span class="sidebar-normal">{{childitem.title}}</span>
+            </a>
+          </li>
         </ul>
+      </div>
+    </li>
+  </ul>
 
 </div>
