--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <div class="logo">
-  <a href="https://www.creative-tim.com" class="simple-text logo-mini">
+  <a routerLink="/dashboard" class="simple-text logo-mini">
     <div class="logo-image-small">
-      <img src="./assets/img/angular2-logo-white.png" />
+      <img src="./assets/img/favicon1.png" />
     </div>
   </a>
 
-  <a href="https://www.creative-tim.com" class="simple-text logo-normal">
+  <a routerLink="/dashboard" class="simple-text logo-normal">
     Angrez The Salon
   </a>
 </div>
