--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,53 +1,53 @@
 <div class="main-content">
   <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-6">
+    <div class="col-lg-4 col-md-6 col-sm-6">
       <div class="card card-stats">
         <div class="card-body ">
           <div class="row">
             <div class="col-5 col-md-4">
               <div class="icon-big text-center icon-warning">
-                <i class="nc-icon nc-globe text-warning"></i>
+                <i class="fa fa-users text-warning"></i>
               </div>
             </div>
             <div class="col-7 col-md-8">
               <div class="numbers">
-                <p class="card-category">Capacity</p>
-                <p class="card-title">150GB
+                <p class="card-category">Employee</p>
+                <p class="card-title">Total Employee: {{employeeReg.length}}
                 </p>
               </div>
             </div>
           </div>
         </div>
-        <div class="card-footer ">
+        <div class="card-footer" (click)="openEmployee()">
           <hr>
           <div class="stats">
-            <i class="fa fa-refresh"></i> Update Now
+            <i class="fa fa-arrow-right"></i> View
           </div>
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
+    <div class="col-lg-4 col-md-6 col-sm-6">
       <div class="card card-stats">
         <div class="card-body ">
           <div class="row">
             <div class="col-5 col-md-4">
               <div class="icon-big text-center icon-warning">
-                <i class="nc-icon nc-money-coins text-success"></i>
+                <i class="fa fa-scissors text-success"></i>
               </div>
             </div>
             <div class="col-7 col-md-8">
               <div class="numbers">
-                <p class="card-category">Revenue</p>
-                <p class="card-title">$ 1,345
+                <p class="card-category">Services</p>
+                <p class="card-title">Total Services: {{servicesList.length}}
                 </p>
               </div>
             </div>
           </div>
         </div>
-        <div class="card-footer ">
+        <div class="card-footer" (click)="openServices()">
           <hr>
           <div class="stats">
-            <i class="fa fa-calendar-o"></i> Last day
+            <i class="fa fa-arrow-right"></i> View
           </div>
         </div>
       </div>
