--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,5 +1,67 @@
 <div class="main-content">
-    <div class="card">
+    <div class="row" *ngIf="!showEmp">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4 class="card-title"> Employee List</h4>
+                        </div>
+                        <div class="ml-md-auto">
+                            <button type="Add" class="btn btn-info btn-round" (click)="addEmployee()">
+                                <i class="fa fa-plus"></i> Add Employee
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead class="text-primary">
+                                <th class="text-center">#</th>
+                                <th class="text-center">Employee Name</th>
+                                <th class="text-center">Contact NO</th>
+                                <th class="text-center">Address</th>
+                                <th class="text-center">Gender</th>
+                                <th class="text-right">Actions</th>
+                            </thead>
+                            <tbody>
+                                <tr
+                                    *ngFor="let item of employeeReg | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
+                                    <td class="text-center">{{ item.index }}</td>
+                                    <td class="text-center">{{ item.fname}} {{ item.lname}} </td>
+                                    <td class="text-center">{{ item.contact }}</td>
+                                    <td class="text-center">{{ item.address }} ,<br>{{item.city}}</td>
+                                    <td class="text-center">{{ item.gender }}</td>
+
+                                    <td class="text-right">
+                                        <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm">
+                                            <i class="fa fa-edit" data-toggle="modal" data-target="#VisitorModal"
+                                                (click)="viewEmpDetails(item)"></i>
+                                        </button>
+                                        &nbsp;
+                                        <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm"
+                                            (click)="removeEmployee(item.id)">
+                                            <i class="fa fa-times"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="ml-md-auto">
+                            <pagination-controls (pageChange)="p = $event" autoHide="true" responsive="true">
+                            </pagination-controls>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card" *ngIf="showEmp">
         <div class="card-header">
             <div class="row">
                 <div class="col-md-9">
@@ -7,7 +69,7 @@
                 </div>
                 <div class="ml-md-auto">
 
-                    <button type="cancel" class="btn btn-danger btn-round" (click)="closeTeacherForm()">
+                    <button type="cancel" class="btn btn-danger btn-round" (click)="closeEmpForm()">
                         <i class="fa fa-arrow-left"></i> Back
                     </button>
                 </div>
@@ -19,15 +81,15 @@
                     <label class="col-md-2 col-form-label">First Name</label>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="firstname" name="firstname"
-                                [(ngModel)]="employeeModel.firstname" placeholder=" Enter First Name " />
+                            <input type="text" class="form-control" id="fname" name="fname"
+                                [(ngModel)]="employeeModel.fname" placeholder=" Enter First Name " />
                         </div>
                     </div>
                     <label class="col-md-2 col-form-label">Last Name</label>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="lastname" name="lastname"
-                                [(ngModel)]="employeeModel.lastname" placeholder=" Enter Last Name" />
+                            <input type="text" class="form-control" id="lname" name="lname"
+                                [(ngModel)]="employeeModel.lname" placeholder=" Enter Last Name" />
                         </div>
                     </div>
                     <label class="col-md-2 col-form-label">Contact Number</label>
@@ -40,8 +102,8 @@
                     <label class="col-md-2 col-form-label">Whatsapp Number</label>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="Whatsapp" [(ngModel)]="employeeModel.Whatsapp"
-                                name="Whatsapp" placeholder="Enter Whatsapp Number" />
+                            <input type="text" class="form-control" id="whatsapp" [(ngModel)]="employeeModel.whatsapp"
+                                name="whatsapp" placeholder="Enter Whatsapp Number" />
                         </div>
                     </div>
 
@@ -90,11 +152,11 @@
                     <label class="col-md-2 col-form-label">Select Services</label>
                     <div class="col-md-4">
                         <div class="btn-group bootstrap-select w-100">
-                            <div style="border: 1px #dddddd solid !important">
-                                <angular2-multiselect [ngModelOptions]="{standalone: true}" [data]="stdData"
+                            <div style="border: 1px #DDDDDD solid !important">
+                                <angular2-multiselect [ngModelOptions]="{standalone: true}" [data]="serviceData"
                                     [(ngModel)]="selectedServices" [settings]="dropdownSettings"
                                     (onSelect)="onItemSelect($event)" (onDeSelect)="OnItemDeSelect($event)"
-                                    (onSelectAll)="onSelectAll($event)" name="itemms"
+                                    (onSelectAll)="onSelectAll($event)" name="items"
                                     (onDeSelectAll)="onDeSelectAll($event)">
                                 </angular2-multiselect>
                             </div>
@@ -110,7 +172,7 @@
                     <button type="submit" class="btn btn-info btn-round" (click)="saveEmployeeDetail(employeeModel)">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                     </button>
-                    <button type="submit" class="btn btn-danger btn-round">
+                    <button type="submit" class="btn btn-danger btn-round" (click)="closeEmpForm()">
                         <i class="fa fa-times" aria-hidden="true"></i> Cancel
                     </button>
                 </div>
