--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -19,44 +19,54 @@
                     <label class="col-md-2 col-form-label">Service Name</label>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="serviceName" name="serviceName"
-                                [(ngModel)]="servicesModel.serviceName" placeholder=" Enter Service Name " />
+                            <input type="text" class="form-control" id="name" name="name"
+                                [(ngModel)]="servicesModel.name" placeholder=" Enter Service Name " />
                         </div>
                     </div>
                     <label class="col-md-2 col-form-label">Service Price</label>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="number" class="form-control" id="servicePrice"
-                                [(ngModel)]="servicesModel.servicePrice" name="servicePrice"
-                                placeholder="Enter Service Price " />
+                            <input type="number" class="form-control" id="price" [(ngModel)]="servicesModel.price"
+                                name="price" placeholder="Enter Service Price " />
                         </div>
                     </div>
                     <label class="col-md-2 col-form-label">Service Time Duration</label>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="number" class="form-control" id="serviceTime" name="serviceTime"
-                                [(ngModel)]="servicesModel.serviceTime" placeholder=" Enter Time (Minute)" />
+                            <input type="number" class="form-control" id="time" name="time"
+                                [(ngModel)]="servicesModel.time" placeholder=" Enter Time (Minute)" />
                         </div>
                     </div>
                     <label class="col-md-2 col-form-label">Service Point</label>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="number" class="form-control" id="servicePoint"
-                                [(ngModel)]="servicesModel.servicePoint" name="servicePoint"
-                                placeholder="Enter Service Point" />
+                            <input type="number" class="form-control" id="point" [(ngModel)]="servicesModel.point"
+                                name="point" placeholder="Enter Service Point" />
                         </div>
                     </div>
                 </div>
 
             </form>
         </div>
-        <div class="card-footer">
+        <div class="card-footer" *ngIf="!submitButton">
             <div class="row">
                 <div class="ml-md-auto">
                     <button type="submit" class="btn btn-info btn-round" (click)="saveServicesDetail(servicesModel)">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                     </button>
-                    <button type="submit" class="btn btn-danger btn-round">
+                    <!-- <button type="submit" class="btn btn-danger btn-round">
+                        <i class="fa fa-times" aria-hidden="true"></i> Cancel
+                    </button> -->
+                </div>
+            </div>
+        </div>
+        <div class="card-footer" *ngIf="submitButton">
+            <div class="row">
+                <div class="ml-md-auto">
+                    <button type="submit" class="btn btn-info btn-round" (click)="updateServicesDetail(servicesModel)">
+                        <i class="fa fa-paper-plane" aria-hidden="true"></i> Update
+                    </button>
+                    <button type="submit" class="btn btn-danger btn-round" (click)="cancelUpdateButton()">
                         <i class="fa fa-times" aria-hidden="true"></i> Cancel
                     </button>
                 </div>
@@ -85,18 +95,18 @@
                                     *ngFor="let item of servicesList | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.name}} </td>
-                                    <td class="text-center">{{ item.price }}</td>
-                                    <td class="text-center">{{ item.time }}</td>
+                                    <td class="text-center">{{ item.price }} ₹</td>
+                                    <td class="text-center">{{ item.time }} minutes</td>
                                     <td class="text-center">{{ item.point }}</td>
 
                                     <td class="text-right">
-                                        <button type="button" rel="tooltip" class="btn btn-info  btn-icon btn-sm">
-                                            <i class="fa fa-eye" data-toggle="modal" data-target="#VisitorModal"
-                                                (click)="viewVisitorDetails(item)"></i>
+                                        <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm">
+                                            <i class="fa fa-edit" data-toggle="modal" data-target="#VisitorModal"
+                                                (click)="viewServicesDetails(item)"></i>
                                         </button>
                                         &nbsp;
                                         <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm"
-                                            (click)="removeSubject(item.id)">
+                                            (click)="removeServices(item.id)">
                                             <i class="fa fa-times"></i>
                                         </button>
                                     </td>
