--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,9 +8,14 @@
           <span class="navbar-toggler-bar bar3"></span>
         </button>
       </div>
-      <a class="navbar-brand" routerLinkActive="active" [routerLink]="['/dashboard']">Paper Dashboard PRO Angular</a>
+
+      <a class="navbar-brand" routerLinkActive="active" href="http://127.0.0.1:5500/index.html">
+        <img style="max-height: 40px;" src="../../../assets/img/logo123.png">
+        <!-- <img style="max-height: 40px;" src="../../../assets/img/logo1.png"> -->
+      </a>
     </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+      aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-bar navbar-kebab"></span>
       <span class="navbar-toggler-bar navbar-kebab"></span>
       <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -18,42 +23,39 @@
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a routerLinkActive="active" [routerLink]="['/dashboard']" class="nav-link">
-            <i class="nc-icon nc-layout-11"></i> Dashboard
+          <a routerLinkActive="active" href="http://127.0.0.1:5500/index.html" class="nav-link">
+            <i class="nc-icon nc-layout-11"></i> Home
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLinkActive="active" href="http://127.0.0.1:5500/about.html" class="nav-link">
+            <i class="nc-icon nc-book-bookmark"></i> About
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLinkActive="active" onmouseover="this.style.color ='#000000';"
+            href="http://127.0.0.1:5500/courses.html" class="nav-link">
+            <i class="nc-icon nc-tap-01"></i> Courses
           </a>
         </li>
         <li class="nav-item ">
-          <a routerLinkActive="active" [routerLink]="['/pages/register']" class="nav-link">
-            <i class="nc-icon nc-book-bookmark"></i> Register
-          </a>
-        </li>
-        <li class="nav-item ">
-          <a routerLinkActive="active" [routerLink]="['/pages/login']"  class="nav-link">
-            <i class="nc-icon nc-tap-01"></i> Login
-          </a>
-        </li>
-        <li class="nav-item ">
-          <a routerLinkActive="active" [routerLink]="['/pages/user']" class="nav-link">
-            <i class="nc-icon nc-satisfied"></i> User
-          </a>
-        </li>
-        <li class="nav-item  active ">
-          <a routerLinkActive="active" [routerLink]="['/pages/lock']" class="nav-link">
-            <i class="nc-icon nc-key-25"></i> Lock
+          <a routerLinkActive="active" href="http://127.0.0.1:5500/contact.html" class="nav-link">
+            <i class="nc-icon nc-satisfied"></i> Contact
           </a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-
 <div class="wrapper wrapper-full-page ">
-  <div class="full-page section-image" filter-color="black" data-image="./assets/img/bg/fabio-mangione.jpg">
+  <div class="full-page section-image" filter-color="red" data-image="./assets/img/bg/map-banner.jpg">
     <!--   you can change the color of the filter page using: data-color="blue | purple | green | orange | red | rose " -->
     <div class="content">
       <div class="container">
         <div class="col-lg-4 col-md-6 ml-auto mr-auto">
-          <form class="form" method="" action="">
+          <form class="register-form" name="loginForm" #loginForm="ngForm" (ngSubmit)="onSubmit()">
+
+
             <div class="card card-login">
               <div class="card-header ">
                 <div class="card-header ">
@@ -61,35 +63,52 @@
                 </div>
               </div>
               <div class="card-body ">
+
                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">
-                      <i class="nc-icon nc-single-02"></i>
-                    </span>
+                  <input type="email" id="email" name="eInput" placeholder="Email" class="form-control"
+                    [(ngModel)]="loginModel.email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
+                    #email="ngModel" required email [ngClass]="{ 'is-invalid': submitted && loginForm.email.errors }"
+                    aria-describedby="basic-addon1" (focus)="focus=true" (blur)="focus=false">
+                  <div class="input-group-append">
+                    <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"
+                        aria-hidden="true"></i></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="First Name..." (focus)="focus=true" (blur)="focus=false">
                 </div>
-                <div class="input-group"  [ngClass]="{'input-group-focus':focus1===true}">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">
-                      <i class="nc-icon nc-key-25"></i>
-                    </span>
+                <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
+                  <div [hidden]="!email.hasError('required')">Email is required</div>
+                  <div [hidden]="!email.hasError('pattern')">Email format should be
+                    <small><b>joe@abc.com</b></small>
                   </div>
-                  <input type="password" placeholder="Password" class="form-control" (focus)="focus1=true" (blur)="focus1=false">
                 </div>
-                <br/>
+
+                <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                  <input type="password" id="password" name="password" placeholder="Password" minlength="6"
+                    class="form-control" [(ngModel)]="loginModel.password" required="true" value="" #password="ngModel"
+                    type="password" required aria-describedby="basic-addon1" (focus)="focus=true" (blur)="focus=false">
+                  <div class="input-group-append">
+                    <span class="input-group-text" id="basic-addon1"><i class="fa fa-key" aria-hidden="true"></i></span>
+                  </div>
+                </div>
+                <div [hidden]="(password.valid || password.pristine || password.untouched )" class="alert alert-danger">
+                  <div [hidden]="!password.hasError('minlength')">password should be 6 digit</div>
+                  <div [hidden]="!password.hasError('required')">password is required</div>
+                </div>
+                <br />
                 <div class="form-group">
-                  <div class="form-check">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="checkbox" value="" checked="">
-                      <span class="form-check-sign"></span>
-                      Subscribe to newsletter
-                    </label>
-                  </div>
+                  <a routerLink='/pages/adminforgot' style="font-weight: 500;">Forgot Password ?</a>
+                  <!-- <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="checkbox" value="" checked="">
+                                            <span class="form-check-sign"></span>
+                                            Subscribe to newsletter
+                                        </label>
+                                    </div> -->
                 </div>
               </div>
               <div class="card-footer ">
-                <a href="javascript:void(0)" class="btn btn-warning btn-round btn-block mb-3">Get Started</a>
+                <!-- <a href="javascript:void(0)"  (click)="Login()" class="btn btn-warning btn-round btn-block mb-3">Get Started</a> -->
+                <button class="btn btn-danger btn-block btn-round" id="registration-submit" (click)="login(loginModel)"
+                  value="Sign in" [disabled]="!loginForm.form.valid"><i class="fa fa-sign-in"></i> Login</button>
               </div>
             </div>
           </form>
@@ -101,20 +120,27 @@
         <div class="row">
           <nav class="footer-nav">
             <ul>
+
               <li>
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>
+                <a href="https://www.keryar.com">
+                  Keryar
+                </a>
               </li>
               <li>
-                <a href="http://blog.creative-tim.com/" target="_blank">Blog</a>
+                <a href="https://keryar.com/why">
+                  Blog
+                </a>
               </li>
               <li>
-                <a href="https://www.creative-tim.com/license" target="_blank">Licenses</a>
+                <a>
+                  Licenses
+                </a>
               </li>
             </ul>
           </nav>
           <div class="credits ml-auto">
             <span class="copyright">
-              &copy; {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by Creative Tim
+              &copy; {{test | date: 'yyyy'}}, Managed by <a href="https://www.keryar.com">Keryar</a>
             </span>
           </div>
         </div>
