--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,24 +4,24 @@
             <ul>
 
                 <li>
-                    <a href="https://www.creative-tim.com">
-                        Creative Tim
+                    <a href="http://www.keryar.com">
+                        Keryar
                     </a>
                 </li>
                 <li>
-                    <a href="http://blog.creative-tim.com">
-                       Blog
+                    <a href="http://keryar.com/why">
+                        Blog
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.creative-tim.com/license">
+                    <a>
                         Licenses
                     </a>
                 </li>
             </ul>
         </nav>
         <div class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by <a href="https://www.creative-tim.com">Creative Tim</a>
+            &copy; {{test | date: 'yyyy'}}, Managed by <a href="http://www.keryar.com">Keryar</a>
         </div>
     </div>
 </footer>
