--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -15,12 +15,12 @@
 
   <div class="user">
     <div class="photo">
-      <img src="./assets/img/faces/ayo-ogunseinde-2.jpg" />
+      <!-- <img src="./assets/img/faces/ayo-ogunseinde-2.jpg" /> -->
     </div>
     <div class="info">
       <a data-toggle="collapse" href="#collapseExample" class="collapsed">
         <span>
-          Chet Faker
+          {{ userName }}
           <b class="caret"></b>
         </span>
       </a>
@@ -41,8 +41,8 @@
           </li>
           <li>
             <a href="javascript:void(0)">
-              <span class="sidebar-mini-icon">S</span>
-              <span class="sidebar-normal">Settings</span>
+              <span class="sidebar-mini-icon">LO</span>
+              <span class="sidebar-normal" (click)="logout()">Logout</span>
             </a>
           </li>
         </ul>
