--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -97,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="card-footer" (click)="openEmployee()">
+        <div class="card-footer">
           <hr>
           <div class="stats">
             <i class="fa fa-arrow-right"></i> View
@@ -123,7 +123,7 @@
             </div>
           </div>
         </div>
-        <div class="card-footer" (click)="openEmployee()">
+        <div class="card-footer">
           <hr>
           <div class="stats">
             <i class="fa fa-arrow-right"></i> View
