--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,9 +8,8 @@
           <span class="navbar-toggler-bar bar3"></span>
         </button>
       </div>
-
       <a class="navbar-brand" routerLinkActive="active" href="http://127.0.0.1:5500/index.html">
-        <img style="max-height: 40px;" src="../../../assets/img/logo123.png">
+        <img style="max-height: 70px;" src="../../../assets/img/Bag Design.png">
         <!-- <img style="max-height: 40px;" src="../../../assets/img/logo1.png"> -->
       </a>
     </div>
@@ -23,24 +22,24 @@
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a routerLinkActive="active" href="http://127.0.0.1:5500/index.html" class="nav-link">
+          <a routerLinkActive="active" href="https://angrezthesalon.com/" target="_blank" class="nav-link">
             <i class="nc-icon nc-layout-11"></i> Home
           </a>
         </li>
         <li class="nav-item">
-          <a routerLinkActive="active" href="http://127.0.0.1:5500/about.html" class="nav-link">
+          <a routerLinkActive="active" href="https://angrezthesalon.com/" class="nav-link">
             <i class="nc-icon nc-book-bookmark"></i> About
           </a>
         </li>
         <li class="nav-item">
-          <a routerLinkActive="active" onmouseover="this.style.color ='#000000';"
-            href="http://127.0.0.1:5500/courses.html" class="nav-link">
-            <i class="nc-icon nc-tap-01"></i> Courses
+          <a routerLinkActive="active" onmouseover="this.style.color ='#000000';" href="https://angrezthesalon.com/"
+            class="nav-link">
+            <i class="nc-icon nc-tap-01"></i> Appointement
           </a>
         </li>
         <li class="nav-item ">
-          <a routerLinkActive="active" href="http://127.0.0.1:5500/contact.html" class="nav-link">
-            <i class="nc-icon nc-satisfied"></i> Contact
+          <a routerLinkActive="active" href="https://angrezthesalon.com/" class="nav-link">
+            <i class="nc-icon nc-satisfied"></i> Blog
           </a>
         </li>
       </ul>
@@ -95,7 +94,7 @@
                 </div>
                 <br />
                 <div class="form-group">
-                  <a routerLink='/pages/adminforgot' style="font-weight: 500;">Forgot Password ?</a>
+                  <a routerLink='/pages/forgotpwd' style="font-weight: 500;">Forgot Password ?</a>
                   <!-- <div class="form-check">
                                         <label class="form-check-label">
                                             <input class="form-check-input" type="checkbox" value="" checked="">
