--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="ml-md-auto">
 
-                    <button type="cancel" class="btn btn-danger btn-round">
+                    <button type="cancel" class="btn btn-danger btn-round" routerLink='/dashboard'>
                         <i class="fa fa-arrow-left"></i> Back
                     </button>
                 </div>
