--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -6,7 +6,7 @@
                     <h4 class="card-title">Add Customer</h4>
                 </div>
                 <div class="ml-md-auto">
-                    <button type="cancel" class="btn btn-danger btn-round" (click)="closeEmpForm()">
+                    <button type="cancel" class="btn btn-danger btn-round" routerLink='/dashboard'>
                         <i class="fa fa-arrow-left"></i> Back
                     </button>
                 </div>
@@ -82,7 +82,7 @@
                     <button type="submit" class="btn btn-info btn-round" (click)="saveCustomerDetail(customerModel)">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                     </button>
-                    <button type="submit" class="btn btn-danger btn-round" (click)="closeEmpForm()">
+                    <button type="submit" class="btn btn-danger btn-round" routerLink='/dashboard'>
                         <i class="fa fa-times" aria-hidden="true"></i> Cancel
                     </button>
                 </div>
@@ -117,7 +117,7 @@
                             <thead class="text-primary">
                                 <th class="text-center"></th>
                                 <th class="text-center">#</th>
-                                <th class="text-center">Employee Name</th>
+                                <th class="text-center">Customer Name</th>
                                 <th class="text-center">Contact NO</th>
                                 <th class="text-center">Whatsapp No</th>
                                 <th class="text-center">Gender</th>
@@ -406,7 +406,7 @@
                     <button type="submit" class="btn btn-info btn-round" (click)="saveAppointmentDetails()">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                     </button>
-                    <button type="submit" class="btn btn-danger btn-round">
+                    <button type="submit" class="btn btn-danger btn-round" (click)="backToCustomer()">
                         <i class="fa fa-times" aria-hidden="true"></i> Cancel
                     </button>
                 </div>
