--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -19,15 +19,13 @@
     </div>
     <div class="info">
       <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-        <span>
-          {{ userName }}
-          <b class="caret"></b>
+        <span>{{ userName }}<b class="caret"></b>
         </span>
       </a>
       <div class="clearfix"></div>
       <div class="collapse" id="collapseExample">
         <ul class="nav">
-          <li>
+          <!-- <li>
             <a href="javascript:void(0)">
               <span class="sidebar-mini-icon">MP</span>
               <span class="sidebar-normal">My Profile</span>
@@ -38,7 +36,7 @@
               <span class="sidebar-mini-icon">EP</span>
               <span class="sidebar-normal">Edit Profile</span>
             </a>
-          </li>
+          </li> -->
           <li>
             <a href="javascript:void(0)">
               <span class="sidebar-mini-icon">LO</span>
