--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
             <div class="col-7 col-md-8">
               <div class="numbers">
                 <p class="card-category">Customer</p>
-                <p class="card-title">Total Customers: {{customerList.length}}
+                <p class="card-title">Total: {{customerList.length}}
                 </p>
               </div>
             </div>
@@ -39,7 +39,7 @@
             <div class="col-7 col-md-8">
               <div class="numbers">
                 <p class="card-category">Services</p>
-                <p class="card-title">Total Services: {{servicesList.length}}
+                <p class="card-title">Total: {{servicesList.length}}
                 </p>
               </div>
             </div>
@@ -65,7 +65,7 @@
             <div class="col-7 col-md-8">
               <div class="numbers">
                 <p class="card-category">Employee</p>
-                <p class="card-title">Total Employee: {{employeeReg.length}}
+                <p class="card-title">Total: {{employeeReg.length}}
                 </p>
               </div>
             </div>
