--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -18,30 +18,66 @@
                 <div class="row">
                     <label class="col-md-2 col-form-label">Service Name</label>
                     <div class="col-md-4">
-                        <div class="form-group">
+                        <div class="form-group" [ngClass]="{ 'form-group-focus': focus === true }">
                             <input type="text" class="form-control" id="name" name="name"
-                                [(ngModel)]="servicesModel.name" placeholder=" Enter Service Name " />
+                                [(ngModel)]="servicesModel.name" placeholder=" Enter Service Name " required value=""
+                                pattern="^[a-zA-Z ]+$" (focus)="focus = true" #name="ngModel" />
+                        </div>
+                        <div *ngIf="name.errors && (name.dirty || name.touched)" class="alert alert-danger">
+                            <div *ngIf="name.errors.required">
+                                Service Name is required
+                            </div>
+                            <div [hidden]="!name.errors('pattern')">
+                                Enter Only Characters.
+                            </div>
                         </div>
                     </div>
                     <label class="col-md-2 col-form-label">Service Price</label>
                     <div class="col-md-4">
-                        <div class="form-group">
-                            <input type="number" class="form-control" id="price" [(ngModel)]="servicesModel.price"
-                                name="price" placeholder="Enter Service Price " />
+                        <div class="form-group" [ngClass]="{ 'form-group-focus': focus === true }">
+                            <input type="text" class="form-control" id="price" [(ngModel)]="servicesModel.price"
+                                name="price" placeholder="Enter Service Price " required value="" pattern="^[0-9]+$"
+                                (focus)="focus = true" #price="ngModel" />
+                        </div>
+                        <div *ngIf="price.errors && (price.dirty || price.touched)" class="alert alert-danger">
+                            <div *ngIf="price.errors.required">
+                                Price is required
+                            </div>
+                            <div [hidden]="!price.errors('pattern')">
+                                Enter Only Numbers.
+                            </div>
                         </div>
                     </div>
                     <label class="col-md-2 col-form-label">Service Time Duration</label>
                     <div class="col-md-4">
-                        <div class="form-group">
-                            <input type="number" class="form-control" id="time" name="time"
-                                [(ngModel)]="servicesModel.time" placeholder=" Enter Time (Minute)" />
+                        <div class="form-group" [ngClass]="{ 'form-group-focus': focus === true }">
+                            <input type="text" class="form-control" id="time" name="time"
+                                [(ngModel)]="servicesModel.time" placeholder=" Enter Time (Minute)" required value=""
+                                pattern="^[0-9]+$" (focus)="focus = true" #time="ngModel" />
+                        </div>
+                        <div *ngIf="time.errors && (time.dirty || time.touched)" class="alert alert-danger">
+                            <div *ngIf="time.errors.required">
+                                Approx Time is required
+                            </div>
+                            <div [hidden]="!time.errors('pattern')">
+                                Enter Only Numbers (Minutes).
+                            </div>
                         </div>
                     </div>
                     <label class="col-md-2 col-form-label">Service Point</label>
                     <div class="col-md-4">
-                        <div class="form-group">
-                            <input type="number" class="form-control" id="point" [(ngModel)]="servicesModel.point"
-                                name="point" placeholder="Enter Service Point" />
+                        <div class="form-group" [ngClass]="{ 'form-group-focus': focus === true }">
+                            <input type="text" class="form-control" id="point" [(ngModel)]="servicesModel.point"
+                                name="point" placeholder="Enter Service Point" required value="" pattern="^[0-9]+$"
+                                (focus)="focus = true" #point="ngModel" />
+                        </div>
+                        <div *ngIf="point.errors && (point.dirty || point.touched)" class="alert alert-danger">
+                            <div *ngIf="point.errors.required">
+                                Point is required
+                            </div>
+                            <div [hidden]="!fname.errors('pattern')">
+                                Enter Only Numbers.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -51,7 +87,8 @@
         <div class="card-footer" *ngIf="!submitButton">
             <div class="row">
                 <div class="ml-md-auto">
-                    <button type="submit" class="btn btn-info btn-round" (click)="saveServicesDetail(servicesModel)">
+                    <button type="submit" class="btn btn-info btn-round" [disabled]="!servicesRegForm.form.valid"
+                        (click)="saveServicesDetail(servicesModel)">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                     </button>
                     <!-- <button type="submit" class="btn btn-danger btn-round">
