--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
 
   <div class="user">
     <div class="photo">
-      <!-- <img src="./assets/img/faces/ayo-ogunseinde-2.jpg" /> -->
+      <img src="./assets/img/faces/ayo-ogunseinde-2.png" />
     </div>
     <div class="info">
       <a data-toggle="collapse" href="#collapseExample" class="collapsed">
