--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -290,13 +290,13 @@
                                         </label>
                                     </div>
                                 </div>
-                                <label class="col-md-2 col-form-label">Total Points</label>
+                                <!-- <label class="col-md-2 col-form-label">Total Points</label>
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="total" name="total"
                                             placeholder="Total Points" disabled value="{{totalCustomerPoint}}" />
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
 
                         </form>
